# lore-fsspec

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  mise.toml  pyproject.toml
.claude/context-transfers/: 436nzdqz.md  k7m3x9qp.md  toociu3q.md  yq2so0pg.md
.github/workflows/: ci.yml  docs.yml  release.yml
docs/: 01-overview.md  02-design.md  03-roadmap.md
src/lore_fsspec/: __init__.py  _lore.py  _refs.py  core.py  errors.py  transaction.py
tests/: __init__.py  conftest.py  test_benchmark_parquet.py  test_errors.py  test_filesystem.py  test_refs.py
tests/docker/: Dockerfile
