[project]
name = "lore-fsspec"
version = "0.1.0"
description = "fsspec filesystem for Lore (Epic Games' version control system)"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fsspec>=2026.6.0",
    "lore-vcs>=0.8.3",
]

[project.entry-points."fsspec.specs"]
lore = "lore_fsspec.core:LoreFileSystem"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/lore_fsspec"]

[dependency-groups]
bench = [
    "duckdb>=1.5.4",
    "numpy>=2.5.0",
    "polars>=1.41.2",
]
dev = [
    "pytest>=9.1.1",
    "pytest-xdist>=3.8.0",
    "testcontainers>=4.14.2",
]
docs = [
    "pdoc>=15.0.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "integration: requires a reachable Lore server (LORE_TEST_REPOSITORY_URL)",
]
