[project]
name = "lore-fsspec"
version = "0.1.0"
description = "fsspec filesystem for Lore (Epic Games' version control system)"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fsspec>=2026.6.0",
    "lore-vcs>=0.8.3",
]

[project.entry-points."fsspec.specs"]
lore = "lore_fsspec.core:LoreFileSystem"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/lore_fsspec"]

[dependency-groups]
bench = [
    "duckdb>=1.5.4",
    "numpy>=2.5.0",
    "polars>=1.41.2",
]
dev = [
    "pytest>=9.1.1",
    "pytest-cov>=6.0.0",
    "pytest-xdist>=3.8.0",
    "testcontainers>=4.14.2",
]
docs = [
    "pdoc>=15.0.0",
]

[tool.ruff]
line-length = 88
indent-width = 4

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "PLR0913",  # too many arguments -- fsspec constructors require it
    "ASYNC230",  # blocking open() in async -- fsspec runs async on a thread
    "ASYNC240",  # os.path in async -- fsspec runs async on a thread
    "S310",     # URL open -- health-check urlopen in test fixtures
    "S603",     # subprocess -- docker invocation in test fixtures
    "S607",     # partial executable path -- 'docker' resolved via PATH
    "S608",     # SQL injection -- test benchmarks use controlled f-strings
]
pydocstyle = { convention = "google" }

[tool.ruff.lint.per-file-ignores]
"tests/test_*.py" = [
    "S101",
    "D103",
    "SLF001",  # tests legitimately inspect private implementation attributes
]
"tests/conftest.py" = [
    "SLF001",
]
"src/lore_fsspec/transaction.py" = [
    "SLF001",  # LoreTransaction collaborates with LoreFileSystem internals by design
]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "integration: requires a reachable Lore server (LORE_TEST_REPOSITORY_URL)",
]

[tool.coverage.run]
source = ["lore_fsspec"]
branch = true

[tool.coverage.html]
directory = "htmlcov"

[tool.coverage.report]
show_missing = true
fail_under = 85
